fix a 1px text overflow bug in mac firefox

--- a/src/form.css
+++ b/src/form.css
@@ -2,7 +2,7 @@
 .us-textarea {
   border: 1px solid #DBD7BA;
   background: #fff;
-  padding: 11px 12px;
+  padding: 10px 12px;
   font-size: 14px;
   outline: none;
   margin-right: 2px;
@@ -11,7 +11,7 @@
 }
 
 .us-input {
-  height: 16px;
+  height: 18px;
   vertical-align: middle;
 }
 
@@ -19,7 +19,7 @@
 .us-textarea:focus {
   border: 2px solid #00B699;
   border-radius: 2px;
-  padding: 10px 11px;
+  padding: 9px 11px;
 }
 
 .us-input:disabled,
@@ -72,7 +72,7 @@
 .us-form-item-error .us-input,
 .us-form-item-error .us-textarea {
   border: 2px solid #C30000;
-  padding: 10px 11px;
+  padding: 9px 11px;
 }
 
 .us-form-item-error .ui-select-trigger {
